// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropdownMenu > should not render hidden sub list items 1`] = `
<DocumentFragment>
  <ul
    class="sc-bczSft fNlQyJ"
    data-rc="DropdownMenu"
    data-state="closed"
  >
    <li
      class="sc-hKMtDE nSxIU"
      data-highlighted="true"
      data-rc="DropdownMenuItem"
    >
      <a
        class="sc-eCYdKt bTavwg"
        href="/"
        tabindex="0"
      >
        <div
          class="sc-dkzCjb hZLQpO"
        >
          Visible Item
        </div>
      </a>
    </li>
    <li
      class="sc-hKMtDE hqprpk"
      data-rc="DropdownMenuItemWithSubList"
    >
      <div
        class="sc-jSMdHm"
      >
        <button
          class="sc-gKXNOb kYHFJr"
          tabindex="0"
        >
          SubList Item
          <span
            aria-hidden="true"
            class="sc-gsnScm kqpRYF"
            data-rc="LargeSystemIcon.ArrowRight"
          >
            <svg
              fill="none"
              height="32"
              viewBox="0 0 32 32"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M22.1869 16.5875L12.1295 27.4801C11.4897 28.1733 10.4524 28.1733 9.81295 27.4801C9.17343 26.7874 9.17343 25.664 9.81295 24.9714L18.7122 15.3332L9.81321 5.69523C9.17369 5.0023 9.17369 3.87902 9.81321 3.18638C10.4527 2.49346 11.49 2.49346 12.1297 3.18638L22.1872 14.0791C22.5069 14.4256 22.6666 14.8793 22.6666 15.3331C22.6666 15.7872 22.5066 16.2412 22.1869 16.5875Z"
                fill="#F9C000"
                stroke="#F9C000"
              />
            </svg>
          </span>
        </button>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DropdownMenu > should render correctly 1`] = `
<DocumentFragment>
  <ul
    class="sc-bczSft fNlQyJ"
    data-rc="DropdownMenu"
    data-state="closed"
  >
    <li
      class="sc-hKMtDE nSxIU"
      data-highlighted="true"
      data-rc="DropdownMenuItem"
    >
      <a
        class="sc-eCYdKt bTavwg"
        href="/"
        tabindex="0"
      >
        <div
          class="sc-dkzCjb hZLQpO"
        >
          Visible Item
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DropdownMenu should not render hidden sub list items 1`] = `
<DocumentFragment>
  <ul
    class="sc-bcXHqe cIfdxZ"
    data-rc="DropdownMenu"
    data-state="closed"
  >
    <li
      class="sc-hLBbgP JISOz"
      data-highlighted="true"
      data-rc="DropdownMenuItem"
    >
      <a
        class="sc-eDvSVe rDWXz"
        href="/"
        tabindex="0"
      >
        <div
          class="sc-dkrFOg hTlDyj"
        >
          Visible Item
        </div>
      </a>
    </li>
    <li
      class="sc-hLBbgP bjcMb"
      data-rc="DropdownMenuItemWithSubList"
    >
      <div
        class="sc-jSUZER"
      >
        <button
          class="sc-gKPRtg fWpcux"
          tabindex="0"
        >
          SubList Item
          <span
            aria-hidden="true"
            class="sc-gswNZR jBXcUP"
            data-rc="LargeSystemIcon.ArrowRight"
          >
            <svg>
              arrow-right.svg
            </svg>
          </span>
        </button>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`DropdownMenu should render correctly 1`] = `
<DocumentFragment>
  <ul
    class="sc-bcXHqe cIfdxZ"
    data-rc="DropdownMenu"
    data-state="closed"
  >
    <li
      class="sc-hLBbgP JISOz"
      data-highlighted="true"
      data-rc="DropdownMenuItem"
    >
      <a
        class="sc-eDvSVe rDWXz"
        href="/"
        tabindex="0"
      >
        <div
          class="sc-dkrFOg hTlDyj"
        >
          Visible Item
        </div>
      </a>
    </li>
  </ul>
</DocumentFragment>
`;
